tests/ui/closures/2229_closure_analysis/migrations/macro.stderr
error: changes to closure capture in CrabLang 2021 will affect drop order
  --> $DIR/macro.rs:19:13
   |
LL |     let _ = || dbg!(a.0);
   |             ^^      --- in CrabLang 2018, this closure captures all of `a`, but in CrabLang 2021, it will only capture `a.0`
...
LL | }
   | - in CrabLang 2018, `a` is dropped here, but in CrabLang 2021, only `a.0` will be dropped here as part of the closure
   |
   = note: for more information, see <https://doc.crablang.org/nightly/edition-guide/crablang-2021/disjoint-capture-in-closures.html>
note: the lint level is defined here
  --> $DIR/macro.rs:5:9
   |
LL | #![deny(crablang_2021_incompatible_closure_captures)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: add a dummy let to cause `a` to be fully captured
   |
LL |     let _ = || { let _ = &a; dbg!(a.0) };
   |                +++++++++++++           +

error: aborting due to previous error

